# ThermalForge

./: .env.example  .gitignore  README.md  compose.yaml  enable_energy_only.jou  iterate_300_energy_on.jou  overview.md  parameter-simulation-validation.md  requirements.txt  thermalforge-project-understanding-2026-07-10.md  verify_energy.jou
thermalforge-api/: .dockerignore  .env.example  Dockerfile  alembic.ini  openapi.json  pyproject.toml
thermalforge-api/alembic/: env.py
thermalforge-api/alembic/versions/: 0001_initial.py
thermalforge-api/app/: __init__.py  config.py  db.py  main.py
thermalforge-api/app/api/: clarifications.py  dependencies.py  documents.py  engineering.py  health.py  images.py  projects.py  tasks.py  thermal.py  viewer.py
thermalforge-api/app/documents/: __init__.py  chunking.py  ocr.py  parsers.py  schemas.py  validation.py
thermalforge-api/app/domain/: __init__.py  enums.py  errors.py  schemas.py
thermalforge-api/app/engineering/: __init__.py  schemas.py
thermalforge-api/app/imaging/: __init__.py  base.py  factory.py  fixture.py  (+2 more)
thermalforge-api/scripts/: export_openapi.py
thermalforge-api/tests/: conftest.py  test_anthropic_llm.py  test_api.py  test_artifact_store.py  test_document_api.py  test_document_parsers.py  test_engineering_brief.py  test_fixture_llm.py  test_model_completion.py  test_openai_compatible_image.py  test_openai_compatible_llm.py  test_openapi.py  test_pipeline.py  test_queue.py  test_state_machine.py  test_task_start.py  test_thermal_analysis.py  test_thermal_design.py  test_viewer_api.py  test_worker.py
(+354 files in other folders)
