[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "thermalforge-api"
version = "0.1.0"
description = "ThermalForge task orchestration and engineering design API"
requires-python = ">=3.12"
dependencies = [
  "aiofiles",
  "aiosqlite",
  "alembic",
  "anthropic",
  "arq",
  "asyncpg",
  "boto3",
  "charset-normalizer",
  "fastapi",
  "filetype",
  "httpx",
  "onnxruntime",
  "pillow",
  "pydantic-settings",
  "pymupdf",
  "python-multipart",
  "python-docx",
  "rapidocr",
  "sqlalchemy",
  "uvicorn[standard]",
]

[project.optional-dependencies]
dev = [
  "mypy",
  "pytest",
  "pytest-asyncio",
  "ruff",
  "types-aiofiles",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
  "arq.*",
  "boto3.*",
  "botocore.*",
  "filetype.*",
  "fitz.*",
  "rapidocr.*",
]
ignore_missing_imports = true
